# csv-economy-report

./: .flake8  README.md  economy.txt  main.py  pyproject.toml  pytest.ini
core/: __init__.py  arg_parser.py  cli_tools.py  csv_tools.py  logger.py  reports.py  shortcuts.py
core/defined_reports/: __init__.py  average_gdp.py
tests/: conftest.py  test_arg_parser.py  test_cli_tools.py  test_csv_tools.py  test_reports.py  test_shortcuts.py
