[project]
name = "csv-economy-report"
version = "0.1.0"
description = ""
authors = [
    {name = "rukiqq",email = "mitaka@duck.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tabulate (>=0.9.0,<0.10.0)"
]

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
